--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+web-api/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
