--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "^3.1.8",
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4"
+    "dotenv": "^6.1.0"
   }
 }
