--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "debug": "node --nolazy --inspect-brk=9229 server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
