--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "mongodb": "^3.1.8",
-    "dotenv": "^6.1.0"
+    "mongodb": "^3.1.8"
   }
 }
